--- a/dev_documentation.tex
+++ b/dev_documentation.tex
@@ -1,4 +1,4 @@
-% Created 2021-07-12 Mon 13:15
+% Created 2021-07-12 Mon 18:53
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -14,7 +14,7 @@
 \usepackage{amssymb}
 \usepackage{capt-of}
 \usepackage{hyperref}
-\usepackage[legalpaper, portrait, margin=1in]{geometry}
+\usepackage[letterpaper, portrait, margin=1in]{geometry}
 \author{Piero Panariello}
 \author{Piero Panariello}
 \date{\today}
@@ -34,7 +34,7 @@
 
 
 \section{Technologies Used}
-\label{sec:org7854667}
+\label{sec:org6dd1b6f}
 \begin{enumerate}
 \item Python is the programming language of choice
 \item PySimpleGUI : used to render the graphical user interface. \href{https://pysimplegui.readthedocs.io/en/latest/}{Documentation}
@@ -46,15 +46,15 @@
 \end{enumerate}
 
 \section{Mathcad API}
-\label{sec:org628ebf9}
+\label{sec:org28a2280}
 Currently, the Mathcad API supports Mathcad Prime 3.0 and above. From my testing it works best with Mathcad Prime 7.0 (the lastest version). The API documentation can be located \href{https://support.ptc.com/help/mathcad/r7.0/en/index.html\#page/PTC\_Mathcad\_Help\%2Fmathcad\_and\_automation\_api.html\%23}{here}. You can purchase the SDK from Mathcad to get more information and examples, but I would recommend against it (it's \$9000).
 \section{Datypes and Storage of Data}
-\label{sec:org384616c}
+\label{sec:org129ae49}
 \subsubsection{Equipment Class: (stores all the equipment from the excel file)}
-\label{sec:org22b82d8}
+\label{sec:org169eebd}
 \begin{enumerate}
 \item Class variables:
-\label{sec:org4cb61c6}
+\label{sec:orgaee5f5c}
 \begin{itemize}
 \item \textbf{self.items} = list()
 \end{itemize}
@@ -86,7 +86,7 @@ A list of all the equipment names from the excel document
 A list of all the inputs from the header row in the excel document
 
 \item Class methods:
-\label{sec:org19681f6}
+\label{sec:org33adc53}
 
 \begin{itemize}
 \item \textbf{append(self, to\_append:dict)} Takes in a dict as an argument
@@ -105,10 +105,10 @@ Decriments the value of self.cur\_index
 \end{enumerate}
 
 \subsubsection{Outputs Class: (stores the values of the outputs when the user decides to preview the output variables from the Mathcad file)}
-\label{sec:org3ccf58b}
+\label{sec:org878e3d3}
 \begin{enumerate}
 \item Class variables:
-\label{sec:orge60f7e7}
+\label{sec:orga9d3145}
 
 \begin{itemize}
 \item \textbf{self.items} = list()
@@ -120,7 +120,7 @@ alias, [value, unit, power]
 ['f\_p\_tot\_output', [76.65291480057748, 'kg', 0]],
 \ldots{}
 \item Class methods:
-\label{sec:org243dda9}
+\label{sec:org2a2097c}
 \begin{itemize}
 \item \textbf{append(self, to\_append)} Takes tuple or list argument
 \end{itemize}
@@ -139,7 +139,7 @@ Ex: [ 'f\_p\_tot\_output = 408.82 kg', 'f\_p\_min\_output = 76.65 kg', \ldots{}]
 \end{enumerate}
 
 \section{API Details}
-\label{sec:org8a4c024}
+\label{sec:orgcccaf9c}
 
 The MathcadPy library is used as a wrapper that allows you to access all of the mathcad api endpoints from the comfort of Python. You can read more about the Mathcad API \href{https://support.ptc.com/help/mathcad/r7.0/en/index.html\#page/PTC\_Mathcad\_Help\%2Fmathcad\_and\_automation\_api.html\%23}{here}. The API allows you to modify and change Mathcad Prime files. Despite PTC's documenation, you cannot print documents.
 
@@ -170,7 +170,7 @@ Retratable Ceiling Column & Ceiling & 1111 & Medical\\
     Allows the user to preview the Mathcad calculation output. It duplicates the template file into a temp file, takes the inputs and waits for the outputs to generate. It then deletes the temp file when finished. It returns a dictionary with the output values. The debug variable changes if Mathcad will display the windows being edited or not. When \textbf{debug = False}, no window is shown, when \textbf{debug = True}, windows are shown.
 
 \section{Rendering to the GUI}
-\label{sec:org4440a59}
+\label{sec:org9644cf4}
 \textbf{Choose equipment}
     Once the user has input the excel file they want to read from, the program extracts all information in the \textbf{get\_eqpt\_from\_xl} function and places all the equipment names in the Choose Equipment column.
 
@@ -184,7 +184,7 @@ Retratable Ceiling Column & Ceiling & 1111 & Medical\\
     The user has the option to include preview images that correspond to the mounting locations. The images must be included in the excel document. Use the example\_sheet.xlsx as a template. Images muse be .png or .jpg or .jpeg. The images are gathered from the excel sheet using the \textbf{get\_images\_from\_xl(self, num\_images:int)} function. Images are stored as binaries. When the user views a different equipment, the image corresponding to the mounting location is loaded into the Image Preview section of the GUI. Use ./dist/img\_to\_b64.py to convert images from .png/.jpg to binaries. It provides a python file called output.py with the binaries stored in variables. Preview images are automatically converted to binaries in \textbf{get\_images\_from\_xl}.
 
 \section{Saving to the Database}
-\label{sec:org1ed8f59}
+\label{sec:orgf23af58}
 
 \textbf{Saving to Database}
     The database is a .csv file which holds some important information about generated repors. The function save\_to\_csv is used. When the user decides to save the report to the database, they are saving the equipment name, mounting location, tags, and the generated report's unique filename. The user can choose a specific database to save to, or it will save to the default database located in the \textbf{mathcad\_automation\_output} directory.
@@ -195,14 +195,14 @@ The table looks like the one below:
 \hline
 Date & Tags & Name & Mounting Location & File Name\\
 \hline
-2021-06-30 & MEDICAL & RETRACTABLE CEILING COLUMN & CEILING & test.mcdx\\
-2021-06-30 & MEDICAL & RETRACTABLE CEILING COLUMN & CEILING & Retractable\_\ldots{}.mcdx\\
-2021-06-30 & MEDICAL & SURGICAL SCRUB SINK & WALL & Surgical\_\ldots{}.mcdx\\
+2021-06-30 & MEDICAL & RET\ldots{} COLUMN & CEILING & test.mcdx\\
+2021-06-30 & MEDICAL & RET\ldots{} COLUMN & CEILING & Retractable\_\ldots{}.mcdx\\
+2021-06-30 & MEDICAL & SUR\ldots{} SINK & WALL & Surgical\_\ldots{}.mcdx\\
 \hline
 \end{tabular}
 \end{center}
 \section{Flowchart}
-\label{sec:org09e8b63}
+\label{sec:org2688bed}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=.9\linewidth]{./dist/documentation/component_flowchart.png}
