--- a/user_guide.tex
+++ b/user_guide.tex
@@ -1,4 +1,4 @@
-% Created 2021-07-12 Mon 13:19
+% Created 2021-07-12 Mon 18:51
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -14,7 +14,7 @@
 \usepackage{amssymb}
 \usepackage{capt-of}
 \usepackage{hyperref}
-\usepackage[legalpaper, portrait, margin=1in]{geometry}
+\usepackage[letterpaper, portrait, margin=1in]{geometry}
 \author{Piero Panariello}
 \documentclass[7pt]
 \author{Piero Panariello}
@@ -36,20 +36,20 @@
 
 
 \section{About}
-\label{sec:org943ca02}
+\label{sec:org6228d56}
 This program is designed to help automate the heavy lifting of data entry into Mathcad for the equipment anchorage process. It helps you view and modify values taken from an excel spreadsheet before generating a mathcad report.
 
 Please note that this is only compatible with Mathcad Prime 3.1 and above.
 \href{https://youtu.be/La43SoQ3HMg}{Tutorial Video}
 
 \section{Installation}
-\label{sec:org54a9f58}
+\label{sec:org6d0356c}
 \begin{enumerate}
 \item Go to the releases tab on this github page, find the latest distribution and download it. Download the template files provided to get started.
 \item Double click the \textbf{application\_v1.exe} file to launch the application.
 \end{enumerate}
 \section{Use}
-\label{sec:org9e17ebf}
+\label{sec:orga05a410}
 Select the excel file from the templates provided containing the equipment and the input data. The excel sheet should have the following key headers:
 \begin{center}
 \begin{tabular}{llrl}
@@ -74,13 +74,13 @@ Note: Tags should be separated by comma. If you decide to include units, put par
 \item The application is processing your request once you click \textbf{Generate Report} or \textbf{Generate Report For All}. A confirmation popup will appear when the processing is complete.
 \end{enumerate}
 \section{Database}
-\label{sec:orga17cb46}
+\label{sec:orge68dde4}
 \begin{enumerate}
 \item The ``database'' is a .csv file containing all the calculations you have performed with the automation software. This helps with organization and future reference.
 \item Choose the database that you want your generated reports to be appended to. If you choose an already existing database, your new reports will automatically be appended. You can leave this field blank: a database file will automatically be generated in the same folder as the generated reports, and the new reports will be appended.
 \end{enumerate}
 \section{Important Information}
-\label{sec:org36fcba3}
+\label{sec:org82c3749}
 \begin{enumerate}
 \item Make sure to select the appropriate Mathcad template file from the teplates provided. If you are using Mathcad Prime 5.0, you must use a file compatible with that version. Mathcad Prime is backward compatible, however, and older files can be run on more modern versions of the software.
 \item All Generated reports are saved to a folder called \textbf{mathcad\_automation\_output}. This folder is created (if it doesn't exist already) in the same directory as the application.
