--- a/user_guide.org
+++ b/user_guide.org
@@ -21,14 +21,14 @@ Please note that this is only compatible with Mathcad Prime 3.1 and above.
 2. Double click the *application_v1.exe* file to launch the application.
 * Use
 Select the excel file from the templates provided containing the equipment and the input data. The excel sheet should have the following key headers:
-|----------------------------+-------------------+----------------+-------------------------|
-| eqpt_name                  | mounting_location | project_number | tags                    |
-|----------------------------+-------------------+----------------+-------------------------|
-| Anesthesia machine         | Wall, Floor       |           1111 | Medical, ICU, something |
-| Warming Cabinet            | Floor             |           1111 | Medical                 |
-| Surgical Scrub Sink        | Wall              |           1111 | Medical                 |
-| Retractable Ceiling Column | Ceiling           |           1111 | Medical                 |
-|----------------------------+-------------------+----------------+-------------------------|
+|----------------------------+-------------------+----------------+-------------+---------|
+| eqpt_name                  | mounting_location | project_number | eqpt_number | tags    |
+|----------------------------+-------------------+----------------+-------------+---------|
+| Anesthesia machine         | Wall, Floor       |           1111 |        1234 | Medical |
+| Warming Cabinet            | Floor             |           1111 |        1234 | Medical |
+| Surgical Scrub Sink        | Wall              |           1111 |        1234 | Medical | 
+| Retractable Ceiling Column | Ceiling           |           1111 |        1234 | Medical |
+|----------------------------+-------------------+----------------+-------------+---------|
 Note: Tags should be separated by comma. If you decide to include units, put parentheses around the unit and do not include any spaces in the header. There must be two sheets - *values* and *preview_images*. Take a look at *example_sheet.xlsx* for reference.
 1. Select your Mathcad template file for each mounting location. I have provided a single file that works for each location to help you get started. It is located on the same page as the latest distribution.
 2. You can always go back to the file selection screen by clicking *Change Input Files*. You can reload the information from the excel spreadsheet by clicking *Refresh*.
@@ -44,6 +44,6 @@ Note: Tags should be separated by comma. If you decide to include units, put par
 1. Make sure to select the appropriate Mathcad template file from the teplates provided. If you are using Mathcad Prime 5.0, you must use a file compatible with that version. Mathcad Prime is backward compatible, however, and older files can be run on more modern versions of the software.
 1. All Generated reports are saved to a folder called *mathcad_automation_output*. This folder is created (if it doesn't exist already) in the same directory as the application.
 2. Customizing the App:
-   a. If you decide to you want to include your own inputs and outputs, make sure to label your inputs *<my_label>_input*. For example, *alpha_input* would work, but *alpha_something* would not.
-   b. To use your own custom Mathcad template, choose it using the *Change Input Files* button. Ensure the format follows the example Mathcad template provided.
-   c. To use your own custom excel file, choose it using the *Change Input Files* button. Your custom file must follow the formatting rules explicitly defined in the example excel document.
+   - If you decide to you want to include your own inputs and outputs, make sure to label your inputs *<my_label>_input*. For example, *alpha_input* would work, but *alpha_something* would not.
+   - To use your own custom Mathcad template, choose it using the *Change Input Files* button. Ensure the format follows the example Mathcad template provided.
+   - To use your own custom excel file, choose it using the *Change Input Files* button. Your custom file must follow the formatting rules explicitly defined in the example excel document.
