--- a/dev_documentation_edited.tex
+++ b/dev_documentation_edited.tex
@@ -1,4 +1,4 @@
-% Created 2021-07-30 Fri 12:35
+% Created 2021-07-12 Mon 18:53
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -14,6 +14,7 @@
 \usepackage{amssymb}
 \usepackage{capt-of}
 \usepackage{hyperref}
+\usepackage{listings}
 \usepackage[letterpaper, portrait, margin=1in]{geometry}
 \author{Piero Panariello}
 \author{Piero Panariello}
@@ -25,7 +26,7 @@
  pdftitle={Developer Documentation for Mathcad Automation Software},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 27.2 (Org mode 9.4.4)}, 
+ pdfcreator={Emacs 27.1 (Org mode 9.5)}, 
  pdflang={English}}
 \begin{document}
 
@@ -33,21 +34,8 @@
 \tableofcontents
 
 
-\section{File Descriptions}
-\label{sec:orgca99899}
-\begin{enumerate}
-\item \textbf{info.txt}
-This file has information about how to re-create the development environment and how to package and distribute the application. Consult the section \textbf{Packaging and Distribtion} for more information.
-\item \textbf{img\_t0\_b64.py}
-In order to allow images to be displayed within the application, we cannot use traditional .jpg or .png files. We must convert them to a binary format. This allows images to be stored as strings (base64 format). This file converts .png and .jpg files into a python file containing string variables. These variables hold the information of those photos in base46 format. Run the script using \textbf{python img\_to\_b64.py}.
-\item \textbf{images.py}
-This file holds the images we will be using in the application as python variables in base64 format.
-\item \textbf{main.py}
-The application source code. Ensure the developer environment is activated and run \textbf{python main.py} to start the application.
-\end{enumerate}
-
 \section{Technologies Used}
-\label{sec:orgf07bfa3}
+\label{sec:org6dd1b6f}
 \begin{enumerate}
 \item Python is the programming language of choice
 \item PySimpleGUI : used to render the graphical user interface. \href{https://pysimplegui.readthedocs.io/en/latest/}{Documentation}
@@ -59,15 +47,15 @@ The application source code. Ensure the developer environment is activated and r
 \end{enumerate}
 
 \section{Mathcad API}
-\label{sec:orgb21b8a2}
-Currently, the Mathcad API supports Mathcad Prime 3.0 and above. From my testing it works best with Mathcad Prime 7.0 (the lastest version). The API documentation can be located \href{https://support.ptc.com/help/mathcad/r7.0/en/index.html\#page/PTC\_Mathcad\_Help\%2Fmathcad\_and\_automation\_api.html\%23}{here}. You can purchase the SDK from Mathcad to get more information and examples, but I would recommend against it (it's \$9000).
+\label{sec:org28a2280}
+Currently, the Mathcad API supports Mathcad Prime 3.0 and above. From my testing it works best with Mathcad Prime 7.0 (the lastest version). The API documentation can be located \href{https://support.ptc.com/help/mathcad/r7.0/en/index.html\#page/PTC\_Mathcad\_Help\%2Fmathcad\_and\_automation\_api.html\%23}{here}. You can purchase the SDK from PTC to get more information and examples, but I would recommend against it (it's \$9000).
 \section{Datypes and Storage of Data}
-\label{sec:org2912359}
+\label{sec:org129ae49}
 \subsubsection{Equipment Class: (stores all the equipment from the excel file)}
-\label{sec:org7ec381e}
+\label{sec:org169eebd}
 \begin{enumerate}
 \item Class variables:
-\label{sec:org46a6e9e}
+\label{sec:orgaee5f5c}
 \begin{itemize}
 \item \textbf{self.items} = list()
 \end{itemize}
@@ -99,7 +87,7 @@ A list of all the equipment names from the excel document
 A list of all the inputs from the header row in the excel document
 
 \item Class methods:
-\label{sec:orge363b76}
+\label{sec:org33adc53}
 
 \begin{itemize}
 \item \textbf{append(self, to\_append:dict)} Takes in a dict as an argument
@@ -118,10 +106,10 @@ Decriments the value of self.cur\_index
 \end{enumerate}
 
 \subsubsection{Outputs Class: (stores the values of the outputs when the user decides to preview the output variables from the Mathcad file)}
-\label{sec:org8e070c7}
+\label{sec:org878e3d3}
 \begin{enumerate}
 \item Class variables:
-\label{sec:orgdc0468c}
+\label{sec:orga9d3145}
 
 \begin{itemize}
 \item \textbf{self.items} = list()
@@ -133,7 +121,7 @@ alias, [value, unit, power]
 ['f\_p\_tot\_output', [76.65291480057748, 'kg', 0]],
 \ldots{}
 \item Class methods:
-\label{sec:org306ef46}
+\label{sec:org2a2097c}
 \begin{itemize}
 \item \textbf{append(self, to\_append)} Takes tuple or list argument
 \end{itemize}
@@ -152,7 +140,7 @@ Ex: [ 'f\_p\_tot\_output = 408.82 kg', 'f\_p\_min\_output = 76.65 kg', \ldots{}]
 \end{enumerate}
 
 \section{API Details}
-\label{sec:org15f8d72}
+\label{sec:orgcccaf9c}
 
 The MathcadPy library is used as a wrapper that allows you to access all of the mathcad api endpoints from the comfort of Python. You can read more about the Mathcad API \href{https://support.ptc.com/help/mathcad/r7.0/en/index.html\#page/PTC\_Mathcad\_Help\%2Fmathcad\_and\_automation\_api.html\%23}{here}. The API allows you to modify and change Mathcad Prime files. Despite PTC's documenation, you cannot print documents.
 
@@ -177,13 +165,13 @@ Retratable Ceiling Column & Ceiling & 1111 & Medical\\
     This acts as a pre-fight test. It checks if the proper template is given for the equipment and passes the equipment and a uniquely generated filename to the generate\_report function.
 
 \textbf{generate\_report(cur\_eqpt, equipment:Equipment, file\_name:str, template\_file:str, files, debug = False)->bool}
-    The function connects to the Mathcad API, opens the template file specific to the mounting location, updates the input values specific to the equipment, and then saves the document. If generateing multiple reports, multithreading is used to speed up the process. Currently 4 threads are being used, but feel free to increase this number if the workflow demands more throughput. This variable is called \textbf{num\_threads} in the event \textbf{generate\_report\_for\_all}. (Events are how PySimpleGUI handles buttons being pressed. Events are checked in the main GUI loop.)
+    The function connects to the Mathcad API, opens the template file specific to the mounting location, updates the input values specific to the equipment, and then saves the document. If generating multiple reports, multithreading is used to speed up the process. Currently 16 threads are being used, but feel free to increase this number if the workflow demands more throughput. This variable is called \textbf{num\_threads} in the event \textbf{generate\_report\_for\_all}. See section 8 (Improving Performance) for more details. (Events are how PySimpleGUI handles buttons being pressed. Events are checked in the main GUI loop.)
 
 \textbf{mathcad\_calculate(eqpt, files, debug = False)->dict}
     Allows the user to preview the Mathcad calculation output. It duplicates the template file into a temp file, takes the inputs and waits for the outputs to generate. It then deletes the temp file when finished. It returns a dictionary with the output values. The debug variable changes if Mathcad will display the windows being edited or not. When \textbf{debug = False}, no window is shown, when \textbf{debug = True}, windows are shown.
 
 \section{Rendering to the GUI}
-\label{sec:orge51548e}
+\label{sec:org9644cf4}
 \textbf{Choose equipment}
     Once the user has input the excel file they want to read from, the program extracts all information in the \textbf{get\_eqpt\_from\_xl} function and places all the equipment names in the Choose Equipment column.
 
@@ -197,7 +185,7 @@ Retratable Ceiling Column & Ceiling & 1111 & Medical\\
     The user has the option to include preview images that correspond to the mounting locations. The images must be included in the excel document. Use the example\_sheet.xlsx as a template. Images muse be .png or .jpg or .jpeg. The images are gathered from the excel sheet using the \textbf{get\_images\_from\_xl(self, num\_images:int)} function. Images are stored as binaries. When the user views a different equipment, the image corresponding to the mounting location is loaded into the Image Preview section of the GUI. Use ./dist/img\_to\_b64.py to convert images from .png/.jpg to binaries. It provides a python file called output.py with the binaries stored in variables. Preview images are automatically converted to binaries in \textbf{get\_images\_from\_xl}.
 
 \section{Saving to the Database}
-\label{sec:org2c84ba6}
+\label{sec:orgf23af58}
 
 \textbf{Saving to Database}
     The database is a .csv file which holds some important information about generated repors. The function save\_to\_csv is used. When the user decides to save the report to the database, they are saving the equipment name, mounting location, tags, and the generated report's unique filename. The user can choose a specific database to save to, or it will save to the default database located in the \textbf{mathcad\_automation\_output} directory.
@@ -215,51 +203,47 @@ Date & Tags & Name & Mounting Location & File Name\\
 \end{tabular}
 \end{center}
 \section{Flowchart}
-\label{sec:org857ebe5}
+\label{sec:org2688bed}
 \begin{figure}[htbp]
-\centering
+\begin{centering}
 \includegraphics[width=.9\linewidth]{./dist/documentation/component_flowchart.png}
-\caption{\label{fig:orgcea4840}Flow chart of program API}
+\caption{\label{fig:1}Flow chart of program API}
+
+\end{centering}
 \end{figure}
 
-
 \section{Improving Performance}
-\label{sec:org4dc073c}
-While the application is performant, there are a few ways to tune the application to improve performance. The function that is least performant is the \textbf{generate\_report\_for\_all} event. Multiple reports need to be generated through Mathcad. To improve performance, I implemented parallel processing. This allows multiple processes to run at the same time: each report is run on a seperate process and is then joined when each process finishes. The \textbf{num\_threads=16} variable allows you to adjust the number of parallel processes occuring. This number is limited to your computer's available threads. I suggest starting at \textbf{num\_threads = 16} and slowly increasing the variable by powers of 2 (ex: 16, 32, 64) until you achieve the desired performance. Keep in mind that the speed in which the Mathcad API can run to generate a single report is constant. Increasing \textbf{num\_threads} will only increase performance if the number of reports to be generated is greater than \textbf{num\_threads}. Note that performance will not be increased if \textbf{num\_threads} is greater than the number of reports to be generated
+\label{sec:orgdcdaf9d}
+While the application is performant, there are a few ways to tune the application to improve performance. The function that is least performant is the \textbf{generate\_report\_for\_all} event. Multiple reports need to be generated through Mathcad. To improve performance, I implemented parallel processing. This allows multiple processes to run at the same time: each report is run on a seperate process and is then joined when each process finishes. The \textbf{num\_threads=16} variable allows you to adjust the number of parallel processes occuring. This number is limited to your computer's available threads. I suggest starting at \textbf{num\_threads = 16} and slowly increasing the variable by powers of 2 (ex: 16, 32, 64) until you achieve the desired performance. Keep in mind that the speed in which the Mathcad API can run to generate a single report is constant. Increasing \textbf{num\_threads} will only increase performance if the number of reports to be generated is greater than \textbf{num\_threads}. Note that performance will not be increased if \textbf{num\_threads} is greater than the number of reports to be generated. 
 
 \section{Re-Creating the Virtual Environment}
-\label{sec:orgfdb9c3d}
-Typical python projects use a "virtual environment" to test and develop the application. This allows for consitancy between machines running the same program. In order to activate the virtual environment, first install \textbf{virtualenv} using pip. Open PowerShell and type the following commands: 
-Install virtualenv 
+\label{sec:orgccc3af9d}
+Typical python projects use a "virtual environment" to test and develop the application. This allows for consitancy between machines running the same program. In order to activate the virtual environment, first install \textbf{virtualenv} using pip. 
 \begin{verbatim}
 pip install virtualenv
 \end{verbatim}
-
-Create the virtual environment in the project's ./dist directory
+Then, create the virtual environment in the project's ./dist directory using the command below. 
 \begin{verbatim}
-python -m venv env
+python -m venv env 
 \end{verbatim}
-
-Activate the virtual environment
+This creates a virtual envionment called \textbf{env} in the ./dist directory. \\
+Then, activate the virtual environment using the command below. 
 \begin{verbatim}
-env\scripts\activate
+env\scripts\activate 
 \end{verbatim}
-
-Install all the requirements into the virtual environment
+Then, install all the project requirements into the virtual environment by running. 
 \begin{verbatim}
-pip install -r requirements.txt
+pip install -r requirements.txt  
 \end{verbatim}
-
-You can now make changes to the application in \textbf{main.py} and run the application with those new changes.
-
+You can now make changes to main.py and test it. 
 
 \section{Packaging and Distribution}
-\label{sec:org265c551}
-I have found that PyInstaller is the best method to package python applications. It "freezes" the code in order to create an executable. Install PyInstaller using pip, and ensure that it is installed by typing \textbf{PyInstaller} in PowerShell. If it is properly installed, run the code below within the activated virtual environment to package the application. Copy the following code onto one line in PowerShell to run it.
+\label{sec:orgcccaf9d}
+I have found that PyInstaller is the best method to package python applications. It "freezes" the code in order to create an executable. Install PyInstaller using pip, and ensure that it is installed by typing \begin{verbatim}PyInstaller\end{verbatim} in PowerShell. If it is properly installed, run the code below within the activated virtual environment to package the application. Copy the following code onto \textbf{one line} in PowerShell to run it. 
 \begin{verbatim}
-  PyInstaller --onefile --windowed 
+PyInstaller --onefile --windowed 
 --paths= "C:\Users\Owner\Desktop\mathcad_auto\dist\main_build\MathcadPy" 
  -i  "C:\Users\Owner\Desktop\mathcad_auto\dist\main_build\images\ma_logo.ico" 
- --name "Mathcad_Anchorage_Automation_v1.1" main.py
+ --name "Mathcad_Anchorage_Automation_v1.1" main.py 
 \end{verbatim}
 \end{document}
