--- a/todo.org
+++ b/todo.org
@@ -1,51 +1,29 @@
-#+TITLE: Todo
-#+author: Piero Panariello
-#+STARTUP: content
-#+BEGIN: clocktable :scope file :maxlevel 2
-#+CAPTION: Clock summary at [2021-07-08 Thu 18:09]
-| Headline                |   Time |      |
-|-------------------------+--------+------|
-| *Total time*            | *3:59* |      |
-|-------------------------+--------+------|
-| In Progress             |   1:58 |      |
-| \_  Documentation       |        | 1:58 |
-| Not Possible            |   2:01 |      |
-| \_  Fix Mathcad 5.0 Bug |        | 2:01 |
-#+END:
+* Parth's charges
+- [X] Make the application object-based
+   - [X] TT logo on the main window
+   - [X] Save outputs so they can be viewed later 
+   - [X] About link in the main window with a link to the documentation
+         [X] Make it be an image (construct in paint)
+  [X] Make it appear on the right had corner of the screen
+  [X] TT logo on left hand corner of the screen 
+	
+   - [X] Input data validation
+         [X] Need to create a class that will become a dependency 
+   - [X] Change inputs to verbose names
+   - [X] Change outputs to verbose names
+   - [X] Embed preview image in main window
+   - [X] Make mounting location a dropdown
+   - [ ] Undo button
+            1. Need to implement a stack of changes made
+            2. Pop the stack when user hits Ctrl-z or Edit->Undo
+   - [ ] Link inputs to excel file (maybe have a save inputs to excel button)
+   - [ ] Create API so parth can edit info about each input 
+   - [ ] Change tags to Equipment Tag and Tag/Category (mentioned in the [[file:\Users\Owner\Downloads\updates.pdf][updates.pdf]])  
+   - [ ] Include project number (mentioned in [[file:\Users\Owner\Downloads\updates.pdf][updates.pdf]]) 
+   - [ ] Information link for each input (mentioned in [[file:\Users\Owner\Downloads\updates.pdf][updates.pdf]]) 
+   - [ ] Info buttons for each of the inputs
+   - [ ] Preview image not updated when changing text inputs
 
-* Ideas
-** Package the application
-into a zip file and prepare for distribution
-* In Progress
-** Documentation
-:LOGBOOK:
-CLOCK: [2021-07-08 Thu 16:10]--[2021-07-08 Thu 18:08]
-:END:
-   Convert user and developer documentation to PDF format
-* Done
-** CG in excel
-    Set one of the inputs as center of gravity
-** Excel doc
-    Write some documentation on the excel sheet
-** Project Number
-    - Include project number as one of the required fields
-    - Include project number in the database
-** Python38.dll
-    Create a zip folder with the program, python38.dll, template files
-** Tooltips
-    Set tooltips in the program
-** Change size of preview images
-* Testing
-* Not Possible
-** Can save to database csv even when it is open in excel
-** Fix Mathcad 5.0 Bug
-:LOGBOOK:
-CLOCK: [2021-07-08 Thu 12:37]--[2021-07-08 Thu 14:38] =>  2:01
-:END:
-
-    - no localobj
-    - Mathcad's example doesn't work, which makes me think that the issue is with how Mathcad Prime 5.0 was installed on the VDI
-    - Can create a virtual machine with windows installed as the operating system, then download mathcad and run the program from there
-    - Download Mathcad Prime 4.0 and test if it works
-    - If it doesn't work, might need to look at modifying the MathcadPy file
-    - Can't install legacy versions of Mathcad
+     
+   - [ ] Change documentaion 
+   - [X] * Put help, refresh, select files into menubar
